# UAV_Classification

./: .dockerignore  .env.example  .gitattributes  .gitignore  CITATION.cff  DDP_GUIDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  test_esc10_implementation.py
esc50/: download.py  esc50_dataset.py  test_datamodule.py  test_esc50.py
notebooks/: AST.ipynb  AST_Script.py  AST_sweep.ipynb  AST_sweep_script.py  Wav2Vec2.ipynb  config.yaml  confmat.ipynb  temp.py
notebooks/AST_helper/: engine.py  model.py  util.py
notebooks/MAST_helper/: engine.py  model.py
notebooks/helper_functions/: engine.py  models.py  util.py
spectrogram_dataset/: README.md  generate_spectrograms.py
src/: ast_model.py  augmentation.ipynb  bertScript.py  config.yaml  data.py  datamodule.py  dataset_demo.ipynb  download_esc10.py  download_esc50.py  lightning_module.py  main.py  model_factory.py  model_graph  newDataste.ipynb  orchestrate.yaml  plt_rebuild.py  ptl_trainer.py  pyproject.toml  run_sweep.py  script.py  sweeps.py  train_cnn.py  trainer.py  triple_spec_test.py
src/.kaggle/: README.md
src/BERT_helper/: engine.py  model.py  util.py
src/audioMNIST/: audiomnist_datamodule.py  audiomnist_dataset.py  download.py
src/config/: model_config.py
src/configs/: __init__.py  augmentation_config.py  config.yaml  configs_aggregate.py  configs_demo.py  dataset_config.py  device_test.py  ensemble_config.py  example_peft_schedules.yaml  loss_config.py  optim_config.py  orchestrate.yaml  peft_config.py  peft_scheduling_config.py  wandb_config.py
src/copy_paste_config/: all-models-orchestrate.yaml  efficientnet-orchestrate.yaml  mert-orchestrate.yaml  mobilenet-orchestrate.yaml  resnet-orchestrate.yaml  vit-orchestrate.yaml
src/data/: data_module.py
src/datasets.example/: README.md
src/esc10/: download.py  esc10_datamodule.py  esc10_dataset.py
src/esc50/: __init__.py  config_esc50_example.yaml  download.py  esc50_datamodule.py  esc50_dataset.py  esc_exploration.ipynb  test_datamodule.py  test_esc50.py
src/helper/: FIM.py  (+23 more)
srcnew/: architectures.py  config.yaml  configs_demo.py  data.py  datamodule.py  hello.py  peft_configs.py  pyproject.toml  script.py  wandb_config.py
srcnew/configs/: augmentation_config.py  config.yaml  configs_demo.py  peft_config.py  wandb_config.py
srcnew/models/: model_factory.py
srcold/: config.yaml  orchestrate.yaml  sweeps.py
(+80 files in other folders)
