[project]
name = "srcnew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audiomentations>=0.35.0",
    "dotenv>=0.9.9",
    "icecream>=2.1.4",
    "librosa>=0.10.2.post1",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "torchviz>=0.0.3",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
]
